# glyphhold-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
glyphhold_mcp/: client.py  config.py  server.py
tests/: test_client.py  test_config.py  test_tool_schema.py
